# manjador

./: .gitignore  README.md  TODO.txt  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  daily_menu.py  food.py  meal.py  measurement.py  my_food.py  plan.py  saved_meal.py  user.py  weight.py
backend/app/routers/: daily_menus.py  data.py  foods.py  meals.py  measurements.py  my_foods.py  plans.py  saved_meals.py  users.py  weekly_menus.py  weights.py
backend/app/schemas/: __init__.py  daily_menu.py  food.py  meal.py  measurement.py  my_food.py  plan.py  saved_meal.py  user.py  weight.py
backend/app/services/: gemini.py  meal_planner.py  nutrition.py  tdee.py
backend/app/services/prompts/: daily_menu_recommendation.txt  food.txt  label.txt  meal_recommendation.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  MacroBar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Charts.tsx  DailyLog.tsx  Dashboard.tsx  FoodDatabase.tsx  Login.tsx  MealPlanner.tsx  Measurements.tsx  MyFoods.tsx  Settings.tsx  WeightTracker.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
